# logloader

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  config.toml  install.sh  install_openssl.sh  logloader.service  upgrade_openssl.sh  uploaded_logs.txt
src/: Log.hpp  LogDatabase.cpp  LogDatabase.hpp  LogLoader.cpp  LogLoader.hpp  ServerInterface.cpp  ServerInterface.hpp  ServerUploadManager.cpp  ServerUploadManager.hpp  main.cpp
